--- a/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
+++ b/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../Cadastro de Fretes/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="icon" href="../img/icone.png" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <div id="menu-lateral"
             style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;"
             class="w-25 h-100 d-none d-md-inline">
-            <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
+           <a  href="../Página Fretes/index.html" style="text-decoration: none;"><h3 class="text-center text-white mt-5">Mooby Fretes</h3></a>
             <div style="height: 170px;"></div>
             <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
             <div style="padding-left: 19%;" class=" text-white fs-5 fw-light">
@@ -47,9 +48,9 @@
                             src="perfil.png" alt="">
                         </button>
                         <ul class="dropdown-menu w-100">
-                            <li><a class="dropdown-item" href="#">Perfil</a></li>
+                            <li><a class="dropdown-item" href="../Perfil Usuario/perfilCaminhoneiro.html">Perfil</a></li>
                             <li><a class="dropdown-item" href="#">Configurações</a></li>
-                            <li><a class="dropdown-item" href="#">Sair</a></li>
+                            <li><a class="dropdown-item" href="../Login/login.html">Sair</a></li>
                           </ul>
                     </div>
 
