--- a/autosave paginas/Perfil Usuario/perfilCaminhoneiro.html
+++ b/autosave paginas/Perfil Usuario/perfilCaminhoneiro.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../img/icone.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
@@ -21,17 +22,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#"style="font-family: 'Montserrat', sans-serif;">Mooby Fretes</a>
+            <a class="navbar-brand" href="../Página Fretes/index.html"style="font-family: 'Montserrat', sans-serif;">Mooby Fretes</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Fretes</a>
+                        <a class="nav-link" href="../Cadastro de Fretes/cadastrodefretes.html">Fretes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Calculadora de Custos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Página 3</a>
+                        <a class="nav-link" disable href="#">Calculadora de Custos</a>
                     </li>
                 </ul>
             </div>
