--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -7,6 +7,7 @@
     <title>Página Fretes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../img/icone.png" type="image/x-icon">
 </head>
 
 <body>
@@ -40,10 +41,10 @@
                             src="perfil.png" alt="">
                         </button>
                         <ul class="dropdown-menu w-100">
-                            <li><a class="dropdown-item" href="#">Perfil</a></li>
+                            <li><a class="dropdown-item" href="../Perfil Usuario/perfilCaminhoneiro.html">Perfil</a></li>
                             <li><a class="dropdown-item" href="#">Configurações</a></li>
-                            <li><a class="dropdown-item" href="#">Sair</a></li>
-                          </ul>
+                            <li><a class="dropdown-item" href="../Login/login.html">Sair</a></li>
+                        </ul>
                     </div>
 
                 </div>
