--- a/autosave paginas/cadastroCaminhoneiro.html
+++ b/autosave paginas/cadastroCaminhoneiro.html
@@ -135,7 +135,7 @@
             </div>
         </div>
         <div style="text-align: right;" class="col text-right">
-            <a href="cadastroCaminhoneiro2.html" style="text-align: center; align-items: center;" type="submit"  class=" botao btn btn-primary" >Cadastrar</a> 
+            <a href="cadastroCaminhoneiro2.html" style="text-align: center; align-items: center;" type="submit"  class=" botao btn btn-primary" >Proximo</a> 
             
         </div>
     </div>
