--- a/autosave paginas/Login/login.html
+++ b/autosave paginas/Login/login.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="stylelogin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="../img/icone.png" type="image/x-icon">
+    <!-- Adiciona o CSS do SweetAlert2 -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.26/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body class="d-md-block d-flex align-items-center">
     <div class="container-fluid">
@@ -42,7 +44,7 @@
                             <p class="m-0 fs-4">Cadastre-se</p>
                         </div>
                         <div class="d-flex justify-content-center mt-3 gap-5">
-                            <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 "disabled>Pessoa</button>
+                            <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 " href="../cadastroCaminhoneiro.html" disabled>Pessoa</button>
                             <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 "disabled>Empresa</button>
                         </div>
                     </div>
@@ -57,6 +59,8 @@
     <!-- Adiciona o SDK do Firebase com compatibilidade -->
     <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-auth-compat.js"></script>
+    <!-- Adiciona o script do SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.26/dist/sweetalert2.all.min.js"></script>
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
@@ -82,8 +86,15 @@
             auth.signInWithEmailAndPassword(email, password)
                 .then((userCredential) => {
                     console.log('Usuário autenticado:', userCredential.user);
-                    alert('Login bem-sucedido!');
-                    window.location.href = '../Página Fretes/index.html'; // Redireciona para a página ListaFretes
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Login bem-sucedido!',
+                        text: 'Você será redirecionado para a página de fretes.',
+                        showConfirmButton: false,
+                        timer: 1500
+                    }).then(() => {
+                        window.location.href = '../Página Fretes/index.html'; // Redireciona para a página ListaFretes
+                    });
                 })
                 .catch((error) => {
                     console.error('Erro ao fazer login:', error);
@@ -98,6 +109,10 @@
                             errorMessage.textContent = 'Erro ao fazer login. Tente novamente mais tarde.';
                             break;
                     }
+                    // Remove a mensagem de erro após 5 segundos
+                    setTimeout(() => {
+                        errorMessage.textContent = '';
+                    }, 5000);
                 });
         };
 
@@ -110,6 +125,10 @@
             // Verifica se os campos de email e senha estão preenchidos
             if (!email || !password) {
                 errorMessage.textContent = 'Por favor, preencha o email e a senha.';
+                // Remove a mensagem de erro após 5 segundos
+                setTimeout(() => {
+                    errorMessage.textContent = '';
+                }, 5000);
                 return;
             }
 
@@ -117,8 +136,15 @@
             auth.createUserWithEmailAndPassword(email, password)
                 .then((userCredential) => {
                     console.log('Usuário registrado:', userCredential.user);
-                    alert('Pré-registro bem-sucedido! Você será redirecionado para a página de fretes.');
-                    window.location.href = '../Página Fretes/index.html'; // Redireciona para a página de login
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Pré-registro bem-sucedido!',
+                        text: 'Você será redirecionado para a página de fretes.',
+                        showConfirmButton: false,
+                        timer: 1500
+                    }).then(() => {
+                        window.location.href = '../Página Fretes/index.html'; // Redireciona para a página de login
+                    });
                 })
                 .catch((error) => {
                     console.error('Erro ao fazer pré-registro:', error);
@@ -136,6 +162,10 @@
                             errorMessage.textContent = 'Erro ao fazer pré-registro. Tente novamente mais tarde.';
                             break;
                     }
+                    // Remove a mensagem de erro após 5 segundos
+                    setTimeout(() => {
+                        errorMessage.textContent = '';
+                    }, 5000);
                 });
         };
 
@@ -146,4 +176,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
-
